# AgentMesh

./: .env.example  .gitignore  CLI_TOOL_GUIDE.md  DEMO_EXECUTION_REPORT.md  MANIFEST.in  QUICKSTART.md  README.md  USER_GUIDE.md  config.py  log.txt  main.py  pyproject.toml  requirements.txt  requirements_api.txt  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh  setup.py
.github/workflows/: daily-commit.yml
UI/: page 2.html  page 3.html  page 5.html  site.html
UI/frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
UI/frontend/public/: agents.html  base.html  dashboard.html  index.html  integration.html  performance.html  pr-review.html  quality.html  results.html  settings.html  styles.css  tasks.html
UI/frontend/public/js/: app.js  router.js
UI/frontend/public/js/pages/: agents.js  analysis-history.js  dashboard.js  diff-viewer.js  file-browser.js  issue-details.js  performance.js  quality.js  results.js  security.js  settings.js  tasks.js
UI/frontend/public/styles/: components.css  main.css  pages.css
UI/frontend/src/components/: footer.html  header.html  sidebar.html
UI/frontend/src/js/: api-v2.js  api.js  auth.js  config.js  utils.js
UI/frontend/src/styles/: input.css
agents/: base_agent.py  coordinator_new.py
api/: __init__.py  rest_api.py
backend/: api_client.py  requirements_backend.txt
cli/: __init__.py  agentmesh_cli.py
core/: agent_registry.py  aggregator.py  conflict_resolver.py  goal_evaluator.py  message_bus.py  models.py  plugin_loader.py
docs/: BACKEND_ARCHITECTURE.md  BACKEND_DEPLOYMENT.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_QUICKSTART.md  FRONTEND_BACKEND_INTEGRATION.md  REST_API_v2_DOCS.md  SETUP_COMPLETE.md
examples/: __init__.py  demo_agentic_loop.py  example_cli_usage.sh  example_github_webhook.py  example_rest_client.py
integrations/: __init__.py  github_pr.py
memory/: __init__.py  shared_memory.py  task_history.py
plugins/: __init__.py  code_quality_agent.py  documentation_agent.py  llm_reasoning_agent.py  performance_agent.py  security_agent.py
tests/: test_backend_system.py
utils/: helpers.py  logger.py
