[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "1.0.0"
description = "Production-Ready Multi-Agent Orchestration Framework for Code Review"
readme = "AgentMesh/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AgentMesh Team", email = "support@agentmesh.dev"}
]
keywords = ["multi-agent", "orchestration", "code-review", "security", "framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/AgentMesh"
"Bug Tracker" = "https://github.com/yourusername/AgentMesh/issues"
Documentation = "https://github.com/yourusername/AgentMesh/blob/main/README.md"
Repository = "https://github.com/yourusername/AgentMesh.git"

[project.scripts]
agentmesh = "cli.agentmesh_cli:cli"
agentmesh-server = "api.rest_api:main"
agentmesh-demo = "main:main"

[tool.setuptools]
packages = ["cli", "api", "core", "agents", "plugins", "memory", "utils", "demo", "examples", "integrations", "tests"]

[tool.setuptools.package-dir]
"" = "AgentMesh"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
